<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_marginStart="10dp"
    android:layout_marginTop="15dp"
    android:layout_marginBottom="10dp"
    android:layout_width="185dp"
    android:layout_height="120dp"
    android:background="@drawable/rounded_item"
    android:elevation="10dp"
    android:clipChildren="false">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewHistoryImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="?attr/colorOnSecondary"
        android:elevation="10dp"
        android:foreground="?attr/selectableItemBackground"
        app:cardCornerRadius="20dp">

        <ImageView
            android:id="@+id/imageViewHistory"
            android:layout_width="90dp"
            android:layout_height="120dp"
            android:background="@drawable/rounded_item"
            android:contentDescription="@string/history_img"
            android:scaleType="centerCrop"
            tools:ignore="ImageContrastCheck"
            tools:src="@tools:sample/avatars" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="78dp"
            android:layout_height="110dp"
            android:layout_marginStart="92dp"
            android:layout_marginTop="5dp"
            tools:ignore="TextSizeCheck">

            <TextView
                android:id="@+id/fruitHistoryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/placeholder_text"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/conditionHistoryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/bad"
                android:textSize="11sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fruitHistoryText" />

            <TextView
                android:id="@+id/dateHistoryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/time"
                android:textSize="11sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/conditionHistoryText" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.appcompat.widget.LinearLayoutCompat>